Samara Mockup, to mrjones.io
Building on the groundwork of the Samara mockup,
intent is to rebuild personal website.

--- a/source/assets/stylesheets/base/_layout.scss
+++ b/source/assets/stylesheets/base/_layout.scss
@@ -10,5 +10,23 @@ html {
 
 html,
 body {
-  height: 100%;
+  background-color: $samara-background-color;
+  border-top: none;
+  display: flex;
+  flex-direction: column;
+  font-family: $font-stack-system;
+  line-height: 20px;
+  margin: 0 auto;
+  min-height: 100vh;
+  position: relative;
+  min-width: 320px;
+}
+
+section {
+  flex: 1;
+}
+
+
+.content {
+  flex: 1;
 }
