--- a/source/assets/stylesheets/main.css.scss
+++ b/source/assets/stylesheets/main.css.scss
@@ -1,6 +1,13 @@
 @import "bourbon";
-@import "neat";
+@import "library/variables";
+@import "library/media";
 
-@import "reset/normalize";
+@import "base/reset";
 
 @import "base/base";
+@import "patterns/container";
+@import "patterns/padded-box";
+@import "components/header";
+@import "components/sections";
+@import "components/paragraphs";
+@import "components/samara-logo";
