--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,1 +1,35 @@
-<h1>Hello world</h1>
+<section class="logo" id="logo">
+  <div class="logo-wrapper">
+    <img src="https://samara.com/images/samara-logo.svg" alt="">
+  </div>
+</section>
+
+<section class="message" id="message">
+  <div class="paragraph big-text">
+    <span class="words">
+      Samara is a design studio
+      at Airbnb exploring
+    </span>
+    <a href="https://medium.com/airbnb-design/introducing-samara-a8ea54dc1d12" target="_blank" id="new-attitudes-link">
+      <span class="underline-link">
+        new attitudes
+      </span>
+    </a>
+      towards sharing
+      and trust. Samara builds
+      hardware and software
+      that support this direction.
+  </div>
+  <div class="paragraph big-text" id="second-paragraph">
+    <span class="words">
+      Airbnb proves that hospitality,
+      generosity, and the simple
+      act of trusting strangers can
+      go a long way. Samara
+      is a space for these values
+      to continue to evolve beyond
+      travel and hospitality and into
+      our daily lives.
+    </span>
+  </div>
+</section>
