--- a/source/assets/stylesheets/base/_base.scss
+++ b/source/assets/stylesheets/base/_base.scss
@@ -1,14 +1,7 @@
-// Bitters 1.5.0
-// http://bitters.bourbon.io
-// Copyright 2013-2017 thoughtbot, inc.
-// MIT License
-
-@import "variables";
-
 @import "buttons";
 @import "forms";
 @import "layout";
 @import "lists";
-@import "media";
+@import "mixins";
 @import "tables";
 @import "typography";
