Re-write Copy Content
As part of a re-branding (visual, communicative), the copy content
is written to better reflect my current learning/working state.

Basic text and links will later be supplemented by hover effects -
including animated gifs, background color changes, and transitions.

--- a/source/assets/stylesheets/base/_layout.scss
+++ b/source/assets/stylesheets/base/_layout.scss
@@ -10,16 +10,10 @@ html {
 
 html,
 body {
-  background-color: $samara-background-color;
+  height: 100%;
   border-top: none;
-  display: flex;
-  flex-direction: column;
   font-family: $font-stack-system;
   line-height: 20px;
-  margin: 0 auto;
-  min-height: 100vh;
-  position: relative;
-  min-width: 320px;
 }
 
 section {
