--- a/source/assets/stylesheets/main.css.scss
+++ b/source/assets/stylesheets/main.css.scss
@@ -5,9 +5,7 @@
 @import "base/reset";
 
 @import "base/base";
-@import "patterns/container";
+@import "patterns/wrapper";
 @import "patterns/padded-box";
-@import "components/header";
 @import "components/sections";
-@import "components/paragraphs";
-@import "components/samara-logo";
+@import "components/logo";
