--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,35 +1,47 @@
-<section class="logo" id="logo">
+<div class="logo" id="logo">
   <div class="logo-wrapper">
-    <img src="https://samara.com/images/samara-logo.svg" alt="">
+    <img src="" alt="">
   </div>
-</section>
-
-<section class="message" id="message">
-  <div class="paragraph big-text">
-    <span class="words">
-      Samara is a design studio
-      at Airbnb exploring
+</div>
+<div class="about" id="message">
+  <h4>Nathan Jones -</h4>
+  <p>
+    I'm a creative technologist hailing from Baltimore living in Chicago.<br>
+    I have a degree in
+    <span id="education" class="education">architecture,</span>
+    and used to work for
+    <span id="employers" class="employers">these
+      <a href="http://www.som.com/" target="_blank">folks.</a>
     </span>
-    <a href="https://medium.com/airbnb-design/introducing-samara-a8ea54dc1d12" target="_blank" id="new-attitudes-link">
-      <span class="underline-link">
-        new attitudes
-      </span>
-    </a>
-      towards sharing
-      and trust. Samara builds
-      hardware and software
-      that support this direction.
-  </div>
-  <div class="paragraph big-text" id="second-paragraph">
-    <span class="words">
-      Airbnb proves that hospitality,
-      generosity, and the simple
-      act of trusting strangers can
-      go a long way. Samara
-      is a space for these values
-      to continue to evolve beyond
-      travel and hospitality and into
-      our daily lives.
-    </span>
-  </div>
-</section>
+  </p>
+</div>
+<div class="tools">
+  <p>tools</p>
+  <ul>
+    <li>Ruby on Rails</li>
+    <li>Javascript</li>
+  </ul>
+</div>
+<div class="at-this-moment">
+  <p>at this moment</p>
+  <ul>
+    <li>Teaching Assistant at
+      <a href="https://codingbootcamp.northwestern.edu/" target="_blank">Northwestern</a>
+    </li>
+    <li>Building software for
+      <a href="https://theminte.com" target="_blank">new business</a>
+    </li>
+  </ul>
+</div>
+<div class="connect">
+  <p>connect</p>
+  <ul>
+    <li>LinkedIn</li>
+    <li>Instagram</li>
+  </ul>
+</div>
+<div class="contact">
+  <h4>
+    Get in touch --> <a href="mailto:nate@mrjones.io">nate@mrjones.io</a>
+  </h4>
+</div>
