--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -4,14 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>samara mockup</title>
+    <title>Nathan Jones | Software Developer</title>
     <%= stylesheet_link_tag "main" %>
     <%= javascript_include_tag "main" %>
+    <%= javascript_include_tag "hoverText" %>
   </head>
   <body class="<%= page_classes %>">
-    <main role="main">
+    <div class="wrapper">
       <%= yield %>
-    </main>
+    </div>
     <%= partial "partials/analytics" %>
   </body>
 </html>
