Gifs, Fonts, Awesomeness
Utilize font awesome icons, add a little color -
prepare for gif awesomeness on next push.

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -6,13 +6,9 @@
 <div class="about" id="message">
   <h4>Nathan Jones -</h4>
   <p>
-    I'm a creative technologist hailing from Baltimore living in Chicago.<br>
-    I have a degree in
-    <span id="education" class="education">architecture,</span>
-    and used to work for
-    <span id="employers" class="employers">these
-      <a href="http://www.som.com/" target="_blank">folks.</a>
-    </span>
+    Architecturally trained software developer living in Chicago.<br>
+    Currently teaching/building software for new beginnings, <br>
+    while exploring my interests in technology.<br>
   </p>
 </div>
 <div class="tools">
@@ -29,19 +25,26 @@
       <a href="https://codingbootcamp.northwestern.edu/" target="_blank">Northwestern</a>
     </li>
     <li>Building software for
-      <a href="https://theminte.com" target="_blank">new business</a>
+      <a href="https://theminte.com" target="_blank">new businesses</a>
     </li>
   </ul>
 </div>
 <div class="connect">
   <p>connect</p>
   <ul>
-    <li>LinkedIn</li>
-    <li>Instagram</li>
+    <li>
+      <a href="https://www.linkedin.com/in/mrjonesbot/" target="_blank">LinkedIn</a>
+    </li>
+    <li>
+      <a href="https://github.com/mrjonesbot" target="_blank">Github</a>
+    </li>
   </ul>
 </div>
 <div class="contact">
   <h4>
-    Get in touch --> <a href="mailto:nate@mrjones.io">nate@mrjones.io</a>
+    Get in touch  <i class="fa fa-envelope-o" aria-hidden="true"></i>
+    <a href="mailto:nate@mrjones.io">nate@mrjones.io</a>,
+    view my <i class="fa fa-file-text-o" aria-hidden="true"></i>
+    <a href="https://www.dropbox.com/s/m4tkwom2dkrtze5/naj_resume_current.pdf?dl=0" target="_blank">resume</a>.
   </h4>
 </div>
