--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -6,6 +6,7 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Nathan Jones | Software Developer</title>
     <%= stylesheet_link_tag "main" %>
+    <%= stylesheet_link_tag "font-awesome.min.css" %>
     <%= javascript_include_tag "main" %>
     <%= javascript_include_tag "hoverText" %>
   </head>
