--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,8 +7,8 @@
   <h4>Nathan Jones -</h4>
   <p>
     Architecturally trained software developer living in Chicago.<br>
-    Currently teaching/building software for new beginnings, <br>
-    while exploring my interests in technology.<br>
+    Building and teaching software for new beginnings,<br>
+    while exploring my interests in technology.
   </p>
 </div>
 <div class="tools">
@@ -43,7 +43,7 @@
 <div class="contact">
   <h4>
     Get in touch  <i class="fa fa-envelope-o" aria-hidden="true"></i>
-    <a href="mailto:nate@mrjones.io">nate@mrjones.io</a>,
+    <a href="mailto:nate@mrjones.io">nate@mrjones.io</a>,<br>
     view my <i class="fa fa-file-text-o" aria-hidden="true"></i>
     <a href="https://www.dropbox.com/s/m4tkwom2dkrtze5/naj_resume_current.pdf?dl=0" target="_blank">resume</a>.
   </h4>
