update index copy

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -24,8 +24,11 @@
     <li>Teaching Assistant at
       <a href="https://codingbootcamp.northwestern.edu/" target="_blank">Northwestern</a>
     </li>
-    <li>Building software for
-      <a href="https://theminte.com" target="_blank">new businesses</a>
+    <li>Lead developer at
+      <a href="https://theminte.com" target="_blank">The Minte</a>
+    </li>
+    <li>Contributor for
+      <a href="http://www.provide.care/" target="_blank">Provide</a>
     </li>
   </ul>
 </div>
