--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -21,13 +21,13 @@
 <div class="at-this-moment">
   <p>at this moment</p>
   <ul>
+    <li>Apprentice at
+      <a href="https://launchpadlab.com/" target="_blank">Launchpad Lab</a>
+    </li>
     <li>Teaching Assistant at
       <a href="https://codingbootcamp.northwestern.edu/" target="_blank">Northwestern</a>
     </li>
-    <li>Lead developer at
-      <a href="https://theminte.com" target="_blank">The Minte</a>
-    </li>
-    <li>Contributor for
+    <li>Contributor of
       <a href="http://www.provide.care/" target="_blank">Provide</a>
     </li>
   </ul>
