--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -15,7 +15,8 @@
   <p>tools</p>
   <ul>
     <li>Ruby on Rails</li>
-    <li>Javascript</li>
+    <li>React</li>
+    <li>Elm novice</li>
   </ul>
 </div>
 <div class="at-this-moment">
