--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -28,7 +28,7 @@
     <li>Teaching Assistant at
       <a href="https://codingbootcamp.northwestern.edu/" target="_blank">Northwestern</a>
     </li>
-    <li>Contributor of
+    <li>Contributor for
       <a href="http://www.provide.care/" target="_blank">Provide</a>
     </li>
   </ul>
