--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -47,8 +47,6 @@
 <div class="contact">
   <h4>
     Get in touch  <i class="fa fa-envelope-o" aria-hidden="true"></i>
-    <a href="mailto:nate@mrjones.io">nate@mrjones.io</a>,<br>
-    view my <i class="fa fa-file-text-o" aria-hidden="true"></i>
-    <a href="https://www.dropbox.com/s/m4tkwom2dkrtze5/naj_resume_current.pdf?dl=0" target="_blank">resume</a>.
+    <a href="mailto:nate@mrjones.io">nate@mrjones.io</a>.
   </h4>
 </div>
