--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -17,17 +17,17 @@
   <p>tools</p>
   <ul>
     <li>Ruby</li>
+    <li>Rails</li>
     <li>Javascript/ES6</li>
-    <li>React & React Router</li>
-    <li>Redux</li>
+    <li>React & Redux</li>
     <li>PostgreSQL</li>
   </ul>
 </div>
 <div class="at-this-moment">
   <p>at this moment</p>
   <ul>
-    <li>Technical Lead at
-      <a href="https://launchpadlab.com/" target="_blank">Launchpad Lab</a>
+    <li>Software Engineer II at
+      <a href="https://yello.co/" target="_blank">Yello</a>
     </li>
   </ul>
 </div>
