--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -26,7 +26,7 @@
 <div class="at-this-moment">
   <p>at this moment</p>
   <ul>
-    <li>Software Engineer II at
+    <li>Senior Software Engineer at
       <a href="https://yello.co/" target="_blank">Yello</a>
     </li>
   </ul>
