--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -17,16 +17,16 @@
   <p>tools</p>
   <ul>
     <li>Ruby</li>
-    <li>Rails</li>
+    <li>Rails on Rails</li>
+    <li>Hotwire</li>
     <li>Javascript/ES6</li>
-    <li>React & Redux</li>
     <li>PostgreSQL</li>
   </ul>
 </div>
 <div class="at-this-moment">
   <p>at this moment</p>
   <ul>
-    <li>Senior Software Engineer at
+    <li>Senior Software Engineer Team Lead at
       <a href="https://yello.co/" target="_blank">Yello</a>
     </li>
   </ul>
