--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -10,7 +10,7 @@
   </p>
   <p>
     <i class="fa fa-envelope-o" aria-hidden="true"></i>
-    <a href="mailto:nate@mrjones.io" style="color:#ff8988;background:#f8f8f8;padding:4px">nate@mrjones.io</a>
+    <a href="mailto:nate@mrjones.io" style="color:#ff8988;background:#f8f8f8;padding:4px">natejones@hey.com</a>
   </p>
 </div>
 <div class="tools">
