--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -17,7 +17,7 @@
   <p>tools</p>
   <ul>
     <li>Ruby</li>
-    <li>Rails on Rails</li>
+    <li>Ruby on Rails</li>
     <li>Hotwire</li>
     <li>Javascript/ES6</li>
     <li>PostgreSQL</li>
