Update job status

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -10,7 +10,7 @@
   </p>
   <p>
     <i class="fa fa-envelope-o" aria-hidden="true"></i>
-    <a href="mailto:nate@mrjones.io" style="color:#ff8988;background:#f8f8f8;padding:4px">natejones@hey.com</a>
+    <a href="mailto:natejones@hey.com" style="color:#ff8988;background:#f8f8f8;padding:4px">natejones@hey.com</a>
   </p>
 </div>
 <div class="tools">
@@ -26,8 +26,8 @@
 <div class="at-this-moment">
   <p>at this moment</p>
   <ul>
-    <li>Senior Software Engineer Team Lead at
-      <a href="https://yello.co/" target="_blank">Yello</a>
+    <li>Head of Software Engineering at
+      <a href="https://risekit.co/" target="_blank">RiseKit</a>
     </li>
   </ul>
 </div>
