Update profile to include polywork

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -37,6 +37,7 @@
     <li>
       <a href="https://github.com/mrjonesbot" target="_blank">Github</a>
     </li>
+    <li><a href="https://poly.work/mrjonesbot" target="_blank">Polywork</a></li>
     <li>
       <a href="https://www.linkedin.com/in/mrjonesio/" target="_blank">LinkedIn</a>
     </li>
